feat: write report for all isp and formatting cell color